# -hil-chassis-sim

./: .gitignore  README.md  cartpole_train.py  chassis_control.py  environment.yml  requirements.txt
.cursor/skills/cpp-unit-test/: SKILL.md  examples.md  reference.md
configs/: planner_llm.local.env.example  planner_llm.yaml.example
configs/benchmark/: default.yaml
configs/rl/: nav_obs_spec.json  ppo_nav.yaml
configs/task_templates/: index.yaml
configs/tasks/: nav_point.yaml  nav_to_box_red.yaml  push_box.yaml  registry.yaml
docs/: BRAIN_ROADMAP.md  DAILY_LEARNING_PLAN.md  HARDWARE_RESEARCH.md  PHASE2_CLASS_DIAGRAM.md  PHASE2_CPP_IMPLEMENTATION_GUIDE.md  PHASE2_IMPLEMENTATION_GUIDE.md  PHASE3_LEARNING_ARCHITECTURE.md  ROS_GRAPH.md
docs/learning_notes/: W01D04_CMD_MONITOR.md  W01D05_LOG_THROTTLE.md  W01D06_TOPIC_AUDIT.md  W01D07_ROS_GRAPH.md  W02D08_CUSTOM_INTERFACES.md  W02D09_PACKAGE_BUILD.md  W02D10_LAUNCH.md  W02D11_LAUNCH_ARGUMENTS.md
ros2_ws/src/chassis_agent/: package.xml  setup.cfg  setup.py
ros2_ws/src/chassis_agent/chassis_agent/: agent_node.py  arm_presets.py  navigation.py
ros2_ws/src/chassis_agent_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/chassis_agent_cpp/include/chassis_agent_cpp/: goal_from_msg.hpp  world_from_msg.hpp
ros2_ws/src/chassis_agent_cpp/src/: agent_node.cpp  goal_from_msg.cpp  world_from_msg.cpp
ros2_ws/src/chassis_agent_cpp/test/: test_goal_from_msg.cpp
ros2_ws/src/chassis_common/: package.xml  setup.cfg  setup.py
ros2_ws/src/chassis_common/chassis_common/: __init__.py  actuators.py  arm_control.py  dynamics.py  episode_reset.py  interaction.py  kinematics.py  model.py  sim_step.py  state_reader.py  task_registry.py  viewer.py
ros2_ws/src/chassis_common/test/: test_task_registry.py
ros2_ws/src/chassis_controller/: CMakeLists.txt  package.xml
ros2_ws/src/chassis_controller/src/: controller_node.cpp
ros2_ws/src/chassis_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/chassis_msgs/msg/: ChassisCommand.msg
ros2_ws/src/chassis_simulation/: package.xml  setup.py
ros2_ws/src/chassis_simulation/chassis_simulation/: simulation_node.py
ros2_ws/src/chassis_simulation/launch/: hil_demo.launch.py
ros2_ws/src/embodied_core/: CMakeLists.txt  package.xml
ros2_ws/src/embodied_core/include/embodied_core/: arm_preset.hpp  brain.hpp  manipulate_skill.hpp  nav_obs_encoder.hpp  nav_obs_spec.hpp  navigate_skill.hpp  navigation.hpp  push_red_box_fsm.hpp  rule_brain.hpp  skill_executor.hpp  skill_output.hpp  task_goal.hpp  world_view.hpp
ros2_ws/src/embodied_core/src/: manipulate_skill.cpp  nav_obs_encoder.cpp  navigate_skill.cpp  navigation.cpp  push_red_box_fsm.cpp  rule_brain.cpp  skill_executor.cpp  world_view.cpp
ros2_ws/src/embodied_core/test/: test_nav_obs_encoder.cpp  test_navigation.cpp  test_push_red_box_fsm.cpp  test_rule_brain.cpp  test_skills.cpp  test_world_view.cpp
ros2_ws/src/embodied_gym/: package.xml  setup.cfg  setup.py
ros2_ws/src/embodied_gym/embodied_gym/: __init__.py  export_onnx.py
ros2_ws/src/embodied_gym/embodied_gym/core/: action.py  observation.py  sim_session.py  task_spec.py
ros2_ws/src/embodied_gym/embodied_gym/envs/: __init__.py  nav_env.py  push_box_env.py
ros2_ws/src/embodied_gym/embodied_gym/manipulate/: __init__.py  rule_manipulate.py
ros2_ws/src/embodied_gym/embodied_gym/rewards/: __init__.py  nav_reward.py
ros2_ws/src/embodied_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/embodied_msgs/msg/: EmbodiedCommand.msg  EmbodiedGoal.msg  EmbodiedTaskPlan.msg  EmbodiedWorldState.msg
ros2_ws/src/embodied_msgs/srv/: ResetEpisode.srv  SetVirtualGrasp.srv
ros2_ws/src/embodied_planner/: package.xml  setup.cfg  setup.py
ros2_ws/src/embodied_planner/embodied_planner/: __init__.py  llm_mock_planner.py  llm_planner.py  llm_schema.py  plan_builder.py  planner_config.py  task_planner_node.py  template_planner.py  templates.py
ros2_ws/src/embodied_planner/test/: test_llm_mock_planner.py
ros2_ws/src/embodied_policy_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/embodied_policy_cpp/include/embodied_policy_cpp/: hybrid_brain.hpp  onnx_session.hpp  rl_brain.hpp
ros2_ws/src/embodied_policy_cpp/src/: hybrid_brain.cpp  onnx_session.cpp  rl_brain.cpp
ros2_ws/src/embodied_policy_cpp/test/: onnx_test_vectors.hpp  onnx_test_vectors.json  test_rl_brain_onnx.cpp
ros2_ws/src/embodied_policy_cpp/test/fixtures/: nav_policy.onnx
ros2_ws/src/learning_tools_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/learning_tools_cpp/launch/: learning_bringup.launch.py
ros2_ws/src/learning_tools_cpp/src/: cmd_monitor_node.cpp  topic_logger_node.cpp
scripts/: benchmark_lib.py  check_llm_key.py  compare_rule_rl.py  env.sh  eval_hybrid_hil.sh  eval_hybrid_hil_monitor.py  eval_nav_rl.py  eval_planner_auto_nav.sh  eval_planner_hil.sh  eval_planner_llm.sh  eval_push_box.py  eval_rl_hil.sh  eval_rl_hil_monitor.py  export_and_verify_onnx.sh  hil_benchmark.py  hil_demo.sh  hil_demo_planner.sh  hil_episode_monitor.py  load_llm_key.sh  m5_smoke_test.sh  parse_gtest_xml.py  run_benchmark.sh  run_embodied_core_tests.sh  send_task.py  task_repl.py  test_llm_classify.py  train_nav_rl.py  verify_nav_env.py  verify_sim_session.py
test/: day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp
