<?xml version="1.0"?>
<package format="3">
  <name>chassis_agent_cpp</name>
  <version>0.1.0</version>
  <description>C++ 具身 Agent ROS 节点（M2：导航冒烟；M3+：FSM 推箱）</description>
  <maintainer email="changwei@example.com">changwei</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>embodied_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>embodied_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
