<?xml version="1.0"?>
<package format="3">
  <name>chassis_controller</name>
  <version>0.2.0</version>
  <description>具身智能体遥控节点 —— 移动底盘 + 机械臂</description>
  <maintainer email="changwei@example.com">changwei</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>embodied_msgs</depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
