<?xml version="1.0"?>
<package format="3">
  <name>chassis_simulation</name>
  <version>0.3.0</version>
  <description>移动操作臂具身智能体仿真节点 (MuJoCo + ROS 2)</description>
  <maintainer email="changwei@example.com">changwei</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>embodied_msgs</depend>
  <depend>chassis_common</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
