<?xml version="1.0"?>
<package format="3">
  <name>embodied_core</name>
  <version>0.1.0</version>
  <description>具身智能体核心算法库（无 ROS 依赖）：WorldView、导航、FSM</description>
  <maintainer email="changwei@example.com">changwei</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
