<?xml version="1.0"?>
<package format="3">
  <name>embodied_planner</name>
  <version>0.1.0</version>
  <description>P3-C2 task planner: natural language / templates to EmbodiedTaskPlan</description>
  <maintainer email="changwei@example.com">changwei</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>embodied_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
