<?xml version="1.0"?>
<package format="3">
  <name>learning_tools_cpp</name>
  <version>0.0.1</version>
  <description>Personal ROS 2 C++ learning package — DO NOT merge to production</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>embodied_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
